fix: right panel scrollbar issue
#363

--- a/src/dotnet/Chat.UI.Blazor/Components/components.css
+++ b/src/dotnet/Chat.UI.Blazor/Components/components.css
@@ -61,7 +61,7 @@
 }
 
 .tab-panel .tab.people-tab {
-    @apply h-full overflow-y-hidden;
+    @apply h-full;
 }
 
 .people-group {
