--- a/src/dotnet/UI.Blazor/Components/TabPanel/tab.css
+++ b/src/dotnet/UI.Blazor/Components/TabPanel/tab.css
@@ -24,7 +24,7 @@
 }
 
 .tab-panel .tab {
-    @apply grow overflow-y-auto;
+    @apply grow;
 }
 
 .shape {
